Новый календарь для выбора даты рождения Подгрузка

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7375,6 +7375,10 @@ button.close {
   margin: 10px;
 }
 
+.dialog{
+      width: 100% !important;
+}
+
 .modal-content {
   position: relative;
   background-color: #fff;
